[gd_scene load_steps=2 format=3 uid="uid://167bw0aqye6e"]

[ext_resource type="Script" uid="uid://kdxdow1la4n8" path="res://ui/game/hud/core/xp_hud.gd" id="1_qpvh6"]

[node name="XpHUD" type="CanvasLayer"]
script = ExtResource("1_qpvh6")

[node name="Root" type="Control" parent="."]
custom_minimum_size = Vector2(600, 20)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BarPanel" type="Panel" parent="Root"]
custom_minimum_size = Vector2(600, 20)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -30.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="XpBar" type="Control" parent="Root/BarPanel"]
custom_minimum_size = Vector2(580, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="ColorRect" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.007843138, 0, 0.011764706, 0.27058825)

[node name="Fill" type="ColorRect" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.33448496, 0.0014110011, 0.66417104, 1)

[node name="XpText" type="Label" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1
